--- a/public/css/user css/signup_and_in.css
+++ b/public/css/user css/signup_and_in.css
@@ -2,34 +2,32 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  /* Modal content */
-  .modal-content {
+}
+
+.modal-content {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     width: 400px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  }
-  
-  /* Close button (X) */
-  .close {
+}
+
+.close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
+}
+
   
   .close:hover,
   .close:focus {
@@ -94,7 +92,7 @@
   }
   
   button.login-btn:hover {
-    background-color: #005bb5;
+    background-color:black;
   }
   
   /* Divider for alternative logins */
@@ -152,7 +150,7 @@
   }
   
   p a {
-    color: #0073e6;
+    color: rgb(49, 91, 49);
     text-decoration: none;
   }
   
