--- a/views/Users/register.html
+++ b/views/Users/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,41 +8,41 @@
     <link rel="stylesheet" href="../../public/css/templatemo-edu-meeting.css"></head>
     <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 <body>
-             <!-- Button to trigger the modal -->
+            
              <div class="scroll-to-section">
                 <a href="javascript:void(0)" id="openModal">Join Us Now!</a>
             </div>
           
-            <!-- The Modal -->
+            
             <div id="loginModal" class="modal">
-                <!-- Modal content -->
+          
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Sign up</h2>
                     <form>
-                        <!-- Full name input -->
+       
                         <label for="fullname">Full Name</label>
                         <input type="fullname" id="fullname" name="fullname" placeholder="Enter your Full Name" required>
-                        <!-- Email input -->
+            
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" placeholder="Enter your Email" required>
           
-                        <!-- Password input -->
+                        
                         <label for="password">Password</label>
                         <div class="password-container">
                             <input type="password" id="password" name="password" placeholder="Enter a Password" required>
                             <button type="button" class="toggle-password" onclick="togglePassword()">&#128065;</button>
                         </div>
-                        <!-- Password input -->
-                        <label for="password">Confirm Password</label>
+                     
+                      <label for="password">Confirm Password</label>
                         <div class="password-container">
                             <input type="password" id="password" name="password" placeholder="Confirm your Password" required>
                             <button type="button" class="toggle-password" onclick="togglePassword()">&#128065;</button>
-                        </div>
-                        <!-- Login button -->
+                        </div> 
+                       
                         <button type="submit" class="login-btn">Create Account</button>
           
-                        <!-- Alternative Login Options -->
+                        
                         <div class="divider">or</div>
                         <button type="button" class="google-btn">
                             <img src="../../public/images/google.png" id="google" alt="Google Logo" class="google-icon">
@@ -56,10 +56,10 @@
                             <img src="../../public/images/apple.png" id="apple" alt="Google Logo" class="google-icon">
                             Continue with Apple
                         </button>
-                        <!-- New user sign-up -->
+                      
                         <p>Already has an account? <a href="index.html">Sign in</a></p>
                     </form>
                 </div>
             </div>
 </body>
-</html>
+</html> -->
