--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -80,6 +80,8 @@
     padding: 10px;
     border: 1px solid #ddd; /* Light border */
     border-radius: 4px;
+    color:white;
+    background-color: transparent;
 }
 
 button {
