--- a/views/Users/meeting-details.html
+++ b/views/Users/meeting-details.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
     <link rel="stylesheet" href="../../public/css/user css/owl.css">
     <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/meeting-details.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <!--
 
@@ -28,36 +30,7 @@ TemplateMo 569 Edu Meeting
 https://templatemo.com/tm-569-edu-meeting
 
 -->
-<style>
-  .testimonial-box img {
-      display: inline-block;
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      margin: 0 0 15px;
-  }
-  .testimonial-box h4 {
-      color: #871717;
-  }
-  .testimonial-box p {
-      margin-bottom: 20px;
-      font-size: 17px;
-      font-style: italic;
-      font-weight: 400;
-      color: white;
-  }
-  .ratings-icons {
-      color: #fec42d;
-      margin-bottom: 15px;
-  }
-  h3.text-center {
-      color: #eae9e9;
-      margin-top: 30px;
-      margin-right:30px;
-      margin-bottom: 30px;
-      font-weight: bold;
-  }
-</style>
+
   </head>
 
 <body>
