--- a/views/Users/meeting-details.html
+++ b/views/Users/meeting-details.html
@@ -138,7 +138,7 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="#">Behance</a></li>
                         </ul>
                         <div class="main-button-red">
-                          <a href="">Add To Cart</a>
+                          <a href="cart-page.html">Add To Cart</a>
                         </div>
                       </div>
                     </div>
@@ -146,6 +146,7 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
               </div>
               <br>
+            
             
              
             </div>
